syntax = "proto3";

package todo;

option go_package = "./pb";


message Todo {
    string id  = 1;
    string title = 2;
    string description = 3;
    string completed = 4;
    string created_at = 5;
    string updated_at = 6;
}

message CreateTodoRequest {
    string title = 1;
    string description = 2;
}

message GetTodoRequest {
    string id = 1;
}


message UpdateTodoRequest {
    string id = 1;
    string title = 2;
    string description = 3;
    string completed = 4;
}

message DeleteTodoRequest {
    string id = 1;
}

message ListTodosRequest {
    int32 limit = 1;
    int32 offset = 2;
}

message CreateTodoResponse {
    Todo todo = 1;
}

message GetTodoResponse {
    Todo todo = 1;
}

message UpdateTodoResponse {
    Todo todo = 1;
}


message DeleteTodoResponse {
    bool success = 1;
}

message ListTodosResponse {
    repeated Todo todo = 1;
    int32 total = 2;

}


service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns (CreateTodoResponse);

    rpc GetTodo(GetTodoRequest) returns (CreateTodoResponse);

    rpc UpdateTodo(UpdateTodoRequest) returns (UpdateTodoResponse);

    rpc DeleteTodo(DeleteTodoRequest) returns (DeleteTodoResponse);

    rpc ListTodos(ListTodosRequest) returns (ListTodosResponse);
}